@@ -6,6 +6,7 @@ cdebconf (0.139) UNRELEASED; urgency=low
   * Fix pointer arithmetic bug in plugin_iterate that meant that only one
     plugin would ever be returned by CAPB (and probably also caused a minor
     buffer overflow, although not exploitable in the context of d-i).
+  * Mark parent halves of confmodule communication pipes close-on-exec.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 19 Jan 2009 22:54:08 +0000
 
